# mashup-learning

./: .env.example  .gitignore  README.md  pyproject.toml  setup.sh
configs/eval/: default.yaml  relevance.yaml  test.yaml
configs/merge/: dare_ties.yaml  linear.yaml  ties.yaml
configs/pipeline/: leave_one_out_fullft.yaml  leave_one_out_lora.yaml  test_lora.yaml
configs/tasks/: arc_easy.yaml  commonsense_qa.yaml  hellaswag.yaml  math_qa.yaml  openbookqa.yaml  piqa.yaml  social_iqa.yaml  winogrande.yaml
configs/train/: fullft_default.yaml  lora_default.yaml  lora_test.yaml  wandb_default.yaml
scripts/: analysis_stage.py  analyze.py  cleanup.py  eval.py  lora_merge.py  merge.py  pipeline.py  postinstall.py  preprocess_datasets.py  run_all_experiments.sh  select_best.py  summary.py  topk.py  train.py  wait_for_disk.py
src/mashup/: cleanup.py  dataset_transforms.py  evaluation.py  lora_merge.py  merging.py  pipeline.py  preprocessing.py  select_best.py  summary.py  topk.py  wait_for_disk.py
src/mashup/analysis/: __init__.py  combined.py  config.py  core.py  plots.py  speedup.py  tables.py  tex_utils.py  timing.py
